dist_man1_MANS=

if BUILD_BURRITOCOIND
  dist_man1_MANS+=burritocoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=burritocoin-qt.1
endif

if BUILD_BURRITOCOIN_CLI
  dist_man1_MANS+=burritocoin-cli.1
endif

if BUILD_BURRITOCOIN_TX
  dist_man1_MANS+=burritocoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BURRITOCOIN_WALLET
  dist_man1_MANS+=burritocoin-wallet.1
endif
endif
